--- a/doc/custom.css
+++ b/doc/custom.css
@@ -1,3 +1,13 @@
 body {
   margin: 40px;
 }
+blockquote {
+ margin: 0px;
+ margin-top: 15px;
+ margin-bottom: 15px;
+ padding: 2px;
+ padding-left: 10px;
+ border: 0px;
+ border-left: 4px solid #000000;
+ background-color: #dddddd;
+}
