--- a/doc/custom.css
+++ b/doc/custom.css
@@ -11,3 +11,11 @@ blockquote {
  border-left: 4px solid #000000;
  background-color: #dddddd;
 }
+table, th, td {
+ border: 1px solid;
+ border-collapse: collapse;
+}
+td, th {
+ padding-left: 5px;
+ padding-right: 5px;
+}
